2010-05-10  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Use gnulib module ‘hash-pjw’.

	* m4/gnulib-cache.m4 (gl_MODULES): Add ‘hash-pjw’.

2010-04-24  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Use gnulib module ‘obstack-printf’.

	* m4/gnulib-cache.m4 (gl_MODULES): Add ‘obstack-printf’.

2010-04-22  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Say "file name" or "file-name" instead of "filename".

	* doc/rcs.texi (Still missing, Common options, Description)
	(ci, rcs): Instead of "filename", say "file name" or "file-name".

2010-04-19  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Don't say "path" when referring to file names.

	* doc/rcs.texi (Still missing): Say "filename" or "search path".

2010-04-17  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Use gnulib module ‘unistd-safer’.

	* m4/gnulib-cache.m4 (gl_MODULES): Add ‘unistd-safer’.

2010-04-13  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Use gnulib module `readlink'.

	* m4/gnulib-cache.m4 (gl_MODULES): Add `readlink'.
	* configure.ac (AC_CHECK_FUNCS_ONCE): Remove `readlink'.

2010-04-13  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Use gnulib module `obstack'.

	* m4/gnulib-cache.m4 (gl_MODULES): Add `obstack'.

2010-04-06  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Ignore `getwd', `getabsname'.

	* configure.ac (AC_CHECK_FUNCS_ONCE): Remove `getwd'.

2010-04-06  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Use gnulib module `same-inode'.

	* m4/gnulib-cache.m4 (gl_MODULES): Add `same-inode'.

2010-04-04  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Use gnulib module `sys_wait'.

	* m4/gnulib-cache.m4 (gl_MODULES): Add `sys_wait'.
	* configure.ac (AC_CHECK_HEADERS_ONCE): Remove sys/wait.h.

2010-04-04  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Use gnulib module `fcntl'.

	* m4/gnulib-cache.m4 (gl_MODULES): Add `fcntl'.
	* configure.ac (AC_CHECK_HEADERS_ONCE): Remove fcntl.h.

2010-04-03  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Ignore <siginfo.h>.
