@@ -15,6 +15,18 @@ options include
 and
 .BR \-z .
 .TP
+.B \s-1RCS_MEM_LIMIT\s0
+An integer
+.IR lim ,
+measured in kilobytes, specifying the threshold under
+which commands will try to use memory-based operations for
+processing the RCS file.
+(For RCS files of size
+.I lim
+kilobytes or greater,
+RCS will use the slower standard input/output routines.)
+Default value is 256.
+.TP
 .B \s-1TMPDIR\s0
 Name of the temporary directory.
 If not set, the environment variables
