@@ -39,11 +39,6 @@
 #include "b-fro.h"
 #include "b-isr.h"
 
-/* Size in bytes up to which we will mmap (if mmap is available).  */
-#ifndef REASONABLE_MMAP_SIZE
-#define REASONABLE_MMAP_SIZE  (256 * 1024)
-#endif
-
 #if MMAP_SIGNAL
 static void
 mmap_deallocate (struct fro *f)
@@ -86,7 +81,7 @@ fro_open (char const *name, char const *type, struct stat *status)
   f->end = s;
 
   /* Determine the read method.  */
-  f->rm = status->st_size <= REASONABLE_MMAP_SIZE
+  f->rm = status->st_size < (off_t)1024 * BE (mem_limit)
     ? (MMAP_SIGNAL && status->st_size
        ? RM_MMAP
        : RM_MEM)
